introduction mobile fixed

--- a/index.scss
+++ b/index.scss
@@ -279,7 +279,7 @@ button {
     display: flex;
     justify-content: space-around;
     align-items: center;
-    margin-bottom: 70px;
+    margin-bottom: 30px;
     height: 100px;
     &__content {
       display: flex;
@@ -306,7 +306,6 @@ button {
       display: none;
     }
     &__text {
-      // margin-top: 10px;
       line-height: 16px;
       font-size: 14px;
       font-weight: 200;
@@ -319,9 +318,6 @@ button {
       transition: 0.5s all ease-in-out;
       &:hover {
         box-shadow: 0 0 10px whitesmoke;
-      }
-
-      &_left {
       }
       &_right {
         transform: rotate(180deg);
@@ -347,16 +343,14 @@ button {
 
   .introduction {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     padding-bottom: 50px;
-    display: none;
     &__header {
       margin: 10px 0;
+      text-align: center;
       &_arrow {
-        background: url("media/longarrow.svg") no-repeat;
-        background-position: right;
-        background-size: 40%;
+        background: none;
       }
     }
     &__item {
@@ -364,9 +358,10 @@ button {
       flex-direction: column;
     }
     &__headers {
-      width: 30%;
+      width: 100%;
     }
     &__text {
+      display: none;
       width: 52%;
     }
   }
